--- a/examples/styles/style.less
+++ b/examples/styles/style.less
@@ -1,7 +1,17 @@
+@import "../../styles/index.less";
+
+*{padding:0;margin:0;}
+
+ul, ol {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
 .app{
 	width: 800px;
 	text-align: center;
 	margin: 0 auto;
-	color: grey;
+	color: red;
 	padding-top: 50px;
 }
