--- a/styles/index.less
+++ b/styles/index.less
@@ -1,3 +1,100 @@
-body{
-	margin: 0;
+.slider-wrapper {
+    position: relative;
+    background: #f5f5f5;
+    border: none;
+    width: 100%;
+    height: 100%;
+
+    .slider-list {
+        height: 100%;
+        zoom: 1;
+        z-index: 10;
+        overflow: hidden;
+
+        & > li > a {
+            display: block;
+            height: 100%;
+        }
+
+        & > li > a > img{
+            width: 100%;
+            height: 100%;
+        }
+
+        & > li {
+            width: 100%;
+            height:100%;
+            float: left;
+            position: absolute;
+            z-index: 1;
+            transition: opacity 1s ease-in-out;
+            opacity:0;
+        }
+
+        & > li.fadeIn {
+            z-index: 2;
+            opacity: 100;
+        }
+
+        & > li > .inner-html {
+            position: absolute;
+            top:0;
+            left:0;
+        }
+    }
+
+    .index-list {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top:80%;
+        z-index: 5;
+        text-align: center;
+
+        & > li{
+            box-shadow: none;
+            cursor: pointer;
+            display: inline-block;
+            width: 9px;
+            height: 9px;
+            border-radius: 50%;
+            border : 1px solid #0acc58;
+            margin: 0 9px;
+            background-color: transparent;
+        }
+
+        & > li.index-on, li:hover {
+            background-color: white;
+            border-color: white;
+        }
+
+    }
+
+    .direction-nav {
+        & & > .slider-prev {
+            left: 0;
+        }
+
+        & & > .slider-next {
+            right: 0;
+        }
+
+        & & > a {
+            opacity: 1;
+            width: 58px;
+            height: 58px;
+            line-height: 58px;
+            margin-top: -29px;
+            background-color: #1a1a1a;
+            text-decoration: none;
+            display: block;
+            position: absolute;
+            top: 50%;
+            z-index: 10;
+            overflow: hidden;
+            color: white;
+            font-size: 18px;
+            text-align: center;
+        }
+    }
 }
