--- a/styles/index.less
+++ b/styles/index.less
@@ -12,6 +12,7 @@
   font-style:normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: bold;
 }
 
 .beyond-slider-back:before { content: "\e697"; }
@@ -86,13 +87,17 @@
         height: 58px;
         line-height: 58px;
         margin-top: -29px;
-        background-color: rgba(0, 0, 0, .8);// #1a1a1a;
         position: absolute;
         top: 50%;
         z-index: 4;
         color: white;
         text-align: center;
         cursor: pointer;
+        transition: background .2s ease-in;
+        &:hover{
+            background: rgba(0, 0, 0, .8);// #1a1a1a;
+
+        }
     }
     &>&-direction-navs>&-direction-prev{
         left: 0;
