--- a/src/styles/components/slider.less
+++ b/src/styles/components/slider.less
@@ -28,8 +28,9 @@
     border: none;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
-    &>&-items {
+    &>&-items{
         // height: 100%;
         overflow: hidden;
         list-style: none;
@@ -48,11 +49,39 @@
         transition: opacity 1s ease-in-out;
         opacity:0;
     }
+    
     &>&-items>&-fadeIn{
         z-index: 2;
         opacity: 1;
     }
+    &>&-items-mobile{
+        height:100%;
+        // width:600%;
+        position: absolute;
+        left: 0px;
 
+    }
+    &>&-items-mobile>li{
+
+        // width: 16.6%;
+        height:100%;
+        // left: 0;
+        // right: 0;
+        // position: absolute;
+        z-index: 1;
+        display: block;
+        float:left;
+        overflow: hidden;
+    }
+    &>&-items-mobile>li>img{
+        width:auto;
+    }
+    &>&-items-mobile .trans-none{
+        transition-property: none;
+    }
+     &>&-items-mobile .trans{
+        transition-property: transform;
+    }   
     &>&-index {
         width: 100%;
         position: absolute;
@@ -106,3 +135,6 @@
         right: 0;
     }
 }
+// .extra{
+//     width:1000px;
+// }
