--- a/src/styles/components/slider.less
+++ b/src/styles/components/slider.less
@@ -54,14 +54,14 @@
         z-index: 2;
         opacity: 1;
     }
-    &>&-items-mobile{
+    &>&-items-gradient{
         height:100%;
         // width:600%;
         position: absolute;
         left: 0px;
 
     }
-    &>&-items-mobile>li{
+    &>&-items-gradient>li{
 
         // width: 16.6%;
         height:100%;
@@ -73,13 +73,13 @@
         float:left;
         overflow: hidden;
     }
-    &>&-items-mobile>li>img{
+    &>&-items-gradient>li>img{
         width:auto;
     }
-    &>&-items-mobile .trans-none{
+    &>&-items-gradient .trans-none{
         transition-property: none;
     }
-     &>&-items-mobile .trans{
+     &>&-items-gradient .trans{
         transition-property: transform;
     }   
     &>&-index {
